# c-capnproto

./: .gitignore  .gitlab-ci.yml  CHANGES.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-SUGGESTED.json  CTestConfig.cmake  README.md  c-capnproto.pc.in  dk  dk.cmd  environment.yml  xmake.lua
ci/: run-with-msvc.cmd
ci/ctest/: Sanitizers-ASAN-CTest.cmake  Sanitizers-UBSAN-CTest.cmake
ci/gitlab/: test.gitlab-ci.yml
cmake/: FindDkToolScripts.cmake
compiler/: c++.capnp.c  c.capnp  c.capnp.c  capnpc-c.c  schema.capnp.c  test.capnp.c
examples/book/: CMakeLists.txt  book.capnp  book.h  test.c
lib/: capnp_c.h
tests/: CMakeLists.txt  example-test.cpp
